// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mul instruction compiler > emits F32_MUL for float32 operands 1`] = `
{
  "byteCode": [
    148,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float",
    },
  ],
}
`;

exports[`mul instruction compiler > emits F64_MUL for float64 operands 1`] = `
{
  "byteCode": [
    162,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "float64",
    },
  ],
}
`;

exports[`mul instruction compiler > emits I32_MUL for integer operands 1`] = `
{
  "byteCode": [
    108,
  ],
  "stack": [
    {
      "isNonZero": false,
      "kind": "value",
      "valueType": "int",
    },
  ],
}
`;
